[gd_scene load_steps=8 format=3 uid="uid://cjsb43uugkud4"]

[ext_resource type="Script" path="res://Scripts/battlePanel.gd" id="1_uyier"]
[ext_resource type="Theme" uid="uid://bklmr3xmk4m5u" path="res://global_theme.tres" id="2_syp0e"]
[ext_resource type="PackedScene" uid="uid://dxj1s2d4grxwj" path="res://Scene/prefab/SoilderItem.tscn" id="3_3ya2h"]
[ext_resource type="Texture2D" uid="uid://dpyahly4tlu7a" path="res://Asset/人物/ZhaoYun.jpg" id="4_v76eo"]
[ext_resource type="Texture2D" uid="uid://xt3xohrjhgbd" path="res://Asset/人物/ZhangFei.jpg" id="5_7n0ga"]
[ext_resource type="Texture2D" uid="uid://dahuc8gb2blc" path="res://Asset/other/0_red.png" id="7_fydxo"]
[ext_resource type="PackedScene" uid="uid://dcydwatjg50hl" path="res://Scene/battleSys/DiskInBattle.tscn" id="8_75jyp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = -1.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uyier")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1389.0
offset_top = -910.0
offset_right = 1603.0
offset_bottom = 702.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -669.0
offset_top = -411.0
offset_right = 669.0
offset_bottom = 411.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(630.615, 267.699)
theme = ExtResource("2_syp0e")

[node name="orderPanel" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 570

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/orderPanel"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="Label2" type="Label" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "请选择你的出征将领：

"
autowrap_mode = 2

[node name="orderVbox" type="HBoxContainer" parent="PanelContainer/orderPanel/VBoxContainer"]
custom_minimum_size = Vector2(2.05, 450)
layout_mode = 2

[node name="Control2" type="Control" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "选择赵云进行练兵升级，这大概需要花费50金，升级成功率100%"
autowrap_mode = 2

[node name="Control" type="Control" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/orderPanel/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="PanelContainer/orderPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Button" type="Button" parent="PanelContainer/orderPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "出征"

[node name="Control3" type="Control" parent="PanelContainer/orderPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="TabBar" type="TabBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -643.0
offset_top = -434.0
offset_right = -214.0
offset_bottom = -379.0
grow_horizontal = 2
grow_vertical = 2
tab_count = 2
tab_0/title = "命令面板"
tab_1/title = "法律法规"

[node name="Control_3" parent="." instance=ExtResource("3_3ya2h")]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 356.0
offset_top = 295.0
offset_right = 736.0
offset_bottom = 745.0
scale = Vector2(0.5, 0.5)
headImg = ExtResource("4_v76eo")
namelv = "关羽：lv1"
repImg = 1

[node name="Control_2" parent="." instance=ExtResource("3_3ya2h")]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 569.0
offset_top = 299.0
offset_right = 949.0
offset_bottom = 749.0
scale = Vector2(0.5, 0.5)
headImg = ExtResource("5_7n0ga")
namelv = "张飞:lv1"
repImg = 2

[node name="Control_1" parent="." instance=ExtResource("3_3ya2h")]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 798.0
offset_top = 303.0
offset_right = 1178.0
offset_bottom = 751.0
scale = Vector2(0.465, 0.465)
headImg = ExtResource("4_v76eo")
namelv = "赵云:lv1"

[node name="TaskLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1109.0
offset_top = 768.0
offset_right = 1594.0
offset_bottom = 912.0
theme_override_font_sizes/font_size = 31
text = "任务条件：
1.
2."
autowrap_mode = 2

[node name="soildNum" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -26.0
offset_right = -54.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 21
text = "0"
horizontal_alignment = 1
autowrap_mode = 2

[node name="coinNum" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -415.0
offset_top = 16.0
offset_right = -53.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 21
text = "0"
horizontal_alignment = 1
autowrap_mode = 2

[node name="sliderlabel1" type="Label" parent="."]
layout_mode = 0
offset_left = 390.0
offset_top = 516.0
offset_right = 875.0
offset_bottom = 660.0
mouse_force_pass_scroll_events = false
theme_override_font_sizes/font_size = 31
text = "士兵人数：
"
autowrap_mode = 2

[node name="sliderlabel2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -560.0
offset_top = 17.0
offset_right = -75.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 31
text = "资金数：
"
autowrap_mode = 2

[node name="coinSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.283333
anchor_top = 0.530556
anchor_right = 0.472
anchor_bottom = 0.545
offset_right = 0.759949
offset_bottom = 0.399963

[node name="soildSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = 544.0
offset_top = 531.0
offset_right = 907.0
offset_bottom = 547.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 643.0
offset_top = -447.0
offset_right = 707.0
offset_bottom = -383.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_fydxo")
texture_pressed = ExtResource("7_fydxo")
texture_hover = ExtResource("7_fydxo")
texture_disabled = ExtResource("7_fydxo")
texture_focused = ExtResource("7_fydxo")
stretch_mode = 0

[node name="battleCircle" parent="." instance=ExtResource("8_75jyp")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 219.0
offset_top = -368.0
offset_right = 937.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="PanelContainer/orderPanel/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="PanelContainer/orderPanel/VBoxContainer/HBoxContainer/Button" to="." method="_on_upgrade_button_pressed"]
[connection signal="tab_button_pressed" from="TabBar" to="." method="_on_tab_bar_tab_button_pressed"]
[connection signal="tab_changed" from="TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="gui_input" from="Control_3" to="." method="_on_control_3_gui_input"]
[connection signal="gui_input" from="Control_2" to="." method="_on_control_2_gui_input"]
[connection signal="gui_input" from="Control_1" to="." method="_on_control_1_gui_input"]
[connection signal="value_changed" from="coinSlider" to="." method="_on_coin_slider_value_changed"]
[connection signal="value_changed" from="soildSlider" to="." method="_soilderNum_changed"]
[connection signal="button_down" from="TextureButton" to="." method="_on_exit_button_button_down"]
